feat: implement foundation model services with OpenAI and Gemini adapters

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=veyflow
+logging.level.org.springframework.boot.autoconfigure=ERROR
+logging.level.root=INFO
+logging.level.com.veyon.veyflow=DEBUG
+logging.level.org.springframework=WARN
