--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
 			<artifactId>okhttp</artifactId>
 			<version>4.12.0</version> 
 		</dependency>
+		<dependency>
+			<groupId>io.lettuce</groupId>
+			<artifactId>lettuce-core</artifactId>
+			<version>6.6.0.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
