feat: implement workflow compilation and execution with Redis state persistence

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ logging.level.org.springframework.boot.autoconfigure=ERROR
 logging.level.root=INFO
 logging.level.com.veyon.veyflow=DEBUG
 logging.level.org.springframework=WARN
+logging.level.com.veyon.veyflow.core.CompiledWorkflow=DEBUG
+logging.level.com.veyon.veyflow.state.RedisAgentStateRepository=DEBUG
