--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.5.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/> 
 	</parent>
 	<groupId>com.veyon</groupId>
 	<artifactId>veyflow</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1.0-beta.1</version>
 	<name>veyflow</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Veyflow: Framework para la creación de agentes inteligentes y flujos de trabajo con IA, basado en Spring Boot.</description>
 	<url/>
 	<licenses>
 		<license/>
